Mobile UI alignment issue Fix

--- a/wiki/guidelines/_sass/_trimble.scss
+++ b/wiki/guidelines/_sass/_trimble.scss
@@ -16,7 +16,10 @@
     .logo img {
         padding: 0 20px;
         display: inline-block;
-        height: 50px;
+        width: 120px;
+        height: 30px;
+        padding-bottom: 10px;
+        margin-top: 17px;
     }
 
     .title {
@@ -72,12 +75,12 @@
     .burger-icon {
         display: none;
         position: absolute;
-        top: 11px;
-        right: 2px;
+        top: 5px;
+        right: 0px;
         float: right;
         width: 35px;
-        height: 35px;
-        padding: 15px 25px;
+        height: 30px;
+        padding: 12px;
 
         path {
             fill: $trimble-medium-blue;
@@ -94,6 +97,7 @@
 
 main {
     background-color: #FFFFFF;
+    min-height: 72.3vh;
     max-width: 1200px;
     margin: 10px auto;
     overflow: auto;
@@ -240,12 +244,15 @@ footer {
     color: #FFFFFF;
     line-height: 2em;
     padding: 10px;
-    height: 125px
+    height: 125px;
+    bottom: 0;
+    padding-bottom: 0;
 }
 footer > div {
     max-width: 1200px;
     padding: 20px 0;
     margin: 0 auto;
+    display: contents;
 }
 
 footer p {
@@ -278,14 +285,18 @@ footer span {
 
         .title {
             font-size: 18pt;
+            font-weight: 500;
             clear: both;
             float: none;
             display: block;
-            text-align: center;
+            text-align: left;
             background-color: $trimble-medium-blue;
             color: #FFFFFF;
             margin: 0;
             padding: 10px;
+        }
+        .logo img { 
+            margin-top: 0;
         }
     }
 
